--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "truffle-hdwallet-provider": "^0.0.3"
   },
   "devDependencies": {
+    "coveralls": "^3.0.0",
     "ethereumjs-testrpc": "^3.0.5",
-    "truffle": "^3.2.5"
+    "solidity-coverage": "^0.4.8",
+    "truffle": "^3.4.11"
   },
   "scripts": {
     "testrpc": "./node_modules/.bin/testrpc --network_id 15",
