--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "truffle-hdwallet-provider": "^0.0.3"
   },
   "devDependencies": {
+    "@digix/doxity": "^0.5.2",
     "coveralls": "^3.0.0",
     "ethereumjs-testrpc": "^3.0.5",
     "solidity-coverage": "^0.4.8",
